<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.loancalculator.MainActivity">

    <LinearLayout
        android:id="@+id/cost"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/view1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/CarCost"
            android:layout_marginLeft="20dp"
            android:textSize="20sp"
        />
        <EditText
            android:id="@+id/inputCost"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="5"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="100dp"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/down"
        android:layout_below="@id/cost"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/view2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:gravity="left"
            android:text="@string/DownPayment"
            android:textSize="20sp"
            />

        <EditText
            android:id="@+id/inputDown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="5"
            android:layout_marginRight="100dp"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/apr"
        android:layout_below="@id/down"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/view3"
            android:layout_width="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:text="@string/APR"
            android:textSize="20sp"
            />

        <EditText
            android:id="@+id/inputAPR"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:layout_marginRight="100dp"
            android:layout_marginLeft="100dp"
            android:ems="5"
            />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/pic"
        android:layout_toRightOf="@id/radGroup"
        android:layout_below="@id/apr"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/car"
          />
    </LinearLayout>

    <RadioGroup
        android:id="@+id/radGroup"
        android:checkedButton="@id/loan"
        android:layout_below="@id/apr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp">

        <RadioButton

            android:id="@+id/loan"
            android:text="@string/loan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <RadioButton
            android:id="@+id/lease"
            android:text="@string/lease"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RadioGroup>


    <LinearLayout
        android:id="@+id/bar"
       android:layout_below="@id/pic"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <SeekBar
            android:id="@+id/lengthBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="60"
            android:progress="36"
            android:layout_gravity="center"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/prog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_above="@id/bar">

        <TextView
            android:id="@+id/viewProg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25dp"
            android:layout_marginLeft="20dp"
            android:text="36 month plan"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/Monthly"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/bar">

        <TextView
            android:id="@+id/viewMonth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:textSize="25dp"

            android:text="@string/monthly"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/Month"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/bar"
        android:layout_marginRight="50dp"
        android:layout_toRightOf="@id/Monthly"
        android:orientation="vertical">

        <TextView
            android:id="@+id/monthOut"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="30dp"
            android:textSize="40dp" />

    </LinearLayout>


</RelativeLayout>
